[package]
name = "py-esplugin"
version = "0.1.0"
edition = "2018"
authors = ["Jonathan Feenstra"]
description = "FFI providing PyO3 bindings for parts of esplugin for Python"
readme = "README.md"
repository = "https://github.com/JonathanFeenstra/py-esplugin"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
categories = ["external-ffi-bindings"]

[lib]
name = "esplugin"
crate-type = ["cdylib"]

[dependencies]
esplugin = "3.4.0"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
