[package]
name = "py-esplugin"
version = "0.3.1"
edition = "2021"
authors = ["Jonathan Feenstra"]
description = "FFI providing PyO3 bindings for parts of esplugin for Python"
readme = "README.md"
repository = "https://github.com/JonathanFeenstra/py-esplugin"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
categories = ["external-ffi-bindings"]

[lib]
name = "esplugin"
crate-type = ["cdylib"]

[dependencies]
esplugin = "4.1.1"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]
